--- a/index.html
+++ b/index.html
@@ -6,6 +6,30 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <b>Hello world</b> <br>
+    <i>Hello world</i> <br>
+    <u>Hello world</u> <br>
+    <strong>Hello world</strong> <br>
+    <em>Hello world</em> <br>
+    Hello<sup> world</sup> <br>
+    Hello<sub>world</sub> <br>
+    <img src="^^.jpg">
+    <ul><li>Grapes</li>
+        <li>Watermelon</li>
+        <li>Apple</li>
+        <li>Banana</li>
+    </ul>
+    <ol><li>Grapes</li>
+        <li>Watermelon</li>
+        <li>Apple</li>
+        <li>Banana</li></ol>
+    <dl><li>Grapes</li>
+        <li>Watermelon</li>
+        <li>Apple</li>
+        <li>Banana</li></dl>
+    <hr>This is a horizontal row
+    <p>This instruction uses an implied accumulator for data manipulation operations. An accumulator is a register used by the CPU to perform logical operations. In one address instruction, the accumulator is implied, and hence, it does not require an explicit reference. For multiplication and division, there is a need for a second register. However, here we will neglect the second register and assume that the accumulator contains the result of all the operations.
+    </p>
+    <abbr title="">abbreviation</abbr>
 </body>
 </html>
